@@ -19,6 +19,8 @@
         
     o   added possibility to specify individual bounds for 
         random starting values (via two element list).
+    
+    o   multicore fitting now uses load balancing.
 	
 	Bugfixes
 	
